Attempt to fix CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: docker://elixir:1.9-alpine
-        run: mix deps.get
+      - run: mix deps.get
