--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions/docker/cli@master
       - uses: docker://elixir:1.9-alpine
-      - run: mix deps.get
+      - run: docker run --mount type=bind,src=`pwd`,target=/usr/src/klaviyo -w /usr/src/klaviyo mix deps.get 
