--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,26 @@ name: CI
 on: push
 jobs:
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        elixir-version: [1.9]
+        os: [ubuntu-latest]
+
+    runs-on: %{{ matrix.os }}
+
     steps:
       - uses: actions/checkout@master
+
       - uses: actions/docker/cli@master
-      - uses: docker://elixir:1.9-alpine
-      - run: docker run --mount type=bind,src=`pwd`,target=/usr/src/klaviyo -w /usr/src/klaviyo elixir:1.9-alpine mix deps.get 
+
+      - uses: docker://elixir:${{ matrix.elixir-version }}-alpine
+
+      - run: |
+          read -r -d '' cmd <<- EOM
+            mix local.hex --force
+            mix local.rebar --force
+            mix deps.get
+            mix test
+          EOM
+
+          docker run --mount type=bind,src=`pwd`,target=/usr/src/klaviyo -w /usr/src/klaviyo elixir:${{ matrix.elixir-version }}-alpine /bin/ash -c $cmd
