--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
 
       - run: |
           cmd='
-            mix local.hex --force
-            mix local.rebar --force
-            mix deps.get
-            mix test
+            mix local.hex --force;
+            mix local.rebar --force;
+            mix deps.get;
+            mix test;
           '
 
           docker run \
