--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,36 @@
 name: CI
 on: push
 jobs:
+  analysis:
+    strategy:
+      matrix:
+        elixir-version: [1.9]
+        os: [ubuntu-latest]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@master
+
+      - uses: actions/docker/cli@master
+
+      - name: Pull elixir:${{ matrix.elixir-version }}-alpine
+        run: docker pull elixir:${{ matrix.elixir-version }}-alpine
+
+      - name: Run `mix dialyzer`
+        run: |
+          cmd='
+            mix local.hex --force;
+            mix local.rebar --force;
+            mix deps.get;
+            mix dialyzer;
+          '
+
+          docker run \
+            --mount type=bind,src=`pwd`,target=/usr/src/klaviyo \
+            -w /usr/src/klaviyo elixir:${{ matrix.elixir-version }}-alpine \
+            /bin/ash -c "$cmd"
+
   test:
     strategy:
       matrix:
@@ -14,9 +44,11 @@ jobs:
 
       - uses: actions/docker/cli@master
 
-      - run: docker pull elixir:${{ matrix.elixir-version }}-alpine
+      - name: Pull elixir:${{ matrix.elixir-version }}-alpine
+        run: docker pull elixir:${{ matrix.elixir-version }}-alpine
 
-      - run: |
+      - name: Run `mix test`
+        run: |
           cmd='
             mix local.hex --force;
             mix local.rebar --force;
