--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,62 +1,60 @@
-name: CI
+name: ci
+
 on: push
+
 jobs:
-  analysis:
+  dialyzer:
     strategy:
       matrix:
-        elixir-version: [1.9]
+        elixir: ['1.8', '1.9', '1.10']
+        otp: ['22.2']
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
-      - uses: actions/docker/cli@master
+      - uses: actions/cache@v1
+        with:
+          key: dialyzer-${{ hashFiles('mix.lock') }}
+          path: _build
 
-      - name: Pull elixir:${{ matrix.elixir-version }}-alpine
-        run: docker pull elixir:${{ matrix.elixir-version }}-alpine
+      - uses: actions/setup-elixir@v1
+        with:
+          elixir-version: ${{ matrix.elixir }}
+          otp-version: ${{ matrix.otp }}
 
-      - name: Run `mix dialyzer`
-        run: |
-          cmd='
-            mix local.hex --force;
-            mix local.rebar --force;
-            mix deps.get;
-            mix dialyzer;
-          '
+      - name: Run mix deps.get
+        run: mix deps.get
 
-          docker run \
-            --mount type=bind,src=`pwd`,target=/usr/src/klaviyo \
-            -w /usr/src/klaviyo elixir:${{ matrix.elixir-version }}-alpine \
-            /bin/ash -c "$cmd"
+      - name: Run mix dialyzer
+        run: mix dialyzer
 
   test:
     strategy:
       matrix:
-        elixir-version: [1.9]
+        elixir: ['1.8', '1.9', '1.10']
+        otp: ['22.2']
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
-      - uses: actions/docker/cli@master
+      - uses: actions/cache@v1
+        with:
+          key: test-${{ hashFiles('mix.lock') }}
+          path: _build
 
-      - name: Pull elixir:${{ matrix.elixir-version }}-alpine
-        run: docker pull elixir:${{ matrix.elixir-version }}-alpine
+      - uses: actions/setup-elixir@v1
+        with:
+          elixir-version: ${{ matrix.elixir }}
+          otp-version: ${{ matrix.otp }}
 
-      - name: Run `mix test`
-        run: |
-          cmd='
-            mix local.hex --force;
-            mix local.rebar --force;
-            mix deps.get;
-            mix test;
-          '
+      - name: Run mix deps.get
+        run: mix deps.get
 
-          docker run \
-            --mount type=bind,src=`pwd`,target=/usr/src/klaviyo \
-            -w /usr/src/klaviyo elixir:${{ matrix.elixir-version }}-alpine \
-            /bin/ash -c "$cmd"
+      - name: Run mix test
+        run: mix test
