--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 version: 2
 
 updates:
-  - package-ecosystem: mix
+    - directory: "/"
 
-    directory: "/"
+      open-pull-requests-limit: 10
 
-    schedule:
-      interval: daily
+      package-ecosystem: mix
 
-    open-pull-requests-limit: 10
+      schedule:
+          interval: daily
 
-    target-branch: master
+      target-branch: master
