--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,62 +3,62 @@ name: ci
 on: push
 
 jobs:
-  dialyzer:
-    runs-on: ubuntu-latest
+    dialyzer:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
 
-      - uses: actions/cache@v2
+            - uses: actions/cache@v2
 
-        with:
-          key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
+              with:
+                  key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
 
-          path: _build
+                  path: _build
 
-      - uses: erlef/setup-elixir@v1
+            - uses: erlef/setup-beam@v1
 
-        with:
-          elixir-version: ${{ matrix.elixir }}
+              with:
+                  elixir-version: ${{ matrix.elixir }}
 
-          otp-version: ${{ matrix.otp }}
+                  otp-version: ${{ matrix.otp }}
 
-      - run: mix deps.get
+            - run: mix deps.get
 
-      - run: mix dialyzer
+            - run: mix dialyzer
 
-    strategy:
-      matrix:
-        elixir: [1.10.x, 1.11.x, 1.12.x]
+        strategy:
+            matrix:
+                elixir: [1.11.x, 1.12.x, 1.13.x]
 
-        otp: [22.x, 23.x, 24.x]
+                otp: [23.x, 24.x, 25.x]
 
-  test:
-    runs-on: ubuntu-latest
+    test:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
 
-      - uses: actions/cache@v2
+            - uses: actions/cache@v2
 
-        with:
-          key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
+              with:
+                  key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
 
-          path: _build
+                  path: _build
 
-      - uses: erlef/setup-elixir@v1
+            - uses: erlef/setup-elixir@v1
 
-        with:
-          elixir-version: ${{ matrix.elixir }}
+              with:
+                  elixir-version: ${{ matrix.elixir }}
 
-          otp-version: ${{ matrix.otp }}
+                  otp-version: ${{ matrix.otp }}
 
-      - run: mix deps.get
+            - run: mix deps.get
 
-      - run: mix test
+            - run: mix test
 
-    strategy:
-      matrix:
-        elixir: [1.10.x, 1.11.x, 1.12.x]
+        strategy:
+            matrix:
+                elixir: [1.11.x, 1.12.x, 1.13.x]
 
-        otp: [22.x, 23.x, 24.x]
+                otp: [23.x, 24.x, 25.x]
