Added dependabot support for the GitHub Action ecosystem

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,16 @@
 version: 2
 
 updates:
-    - directory: "/"
+    - package-ecosystem: github-actions
 
-      open-pull-requests-limit: 10
+      directory: "/"
+
+      schedule:
+          interval: daily
+
+      target-branch: master
+
+    - directory: "/"
 
       package-ecosystem: mix
 
