--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,20 @@ jobs:
 
         strategy:
             matrix:
-                elixir: [1.11.x, 1.12.x, 1.13.x]
+                elixir:
+                    - 1.11.x
+                    - 1.12.x
+                    - 1.13.x
 
-                otp: [23.x, 24.x, 25.x]
+                exclude:
+                    - elixir: 1.11.x
+
+                      otp: 25.x
+
+                otp:
+                    - 23.x
+                    - 24.x
+                    - 25.x
 
     test:
         runs-on: ubuntu-latest
@@ -59,6 +70,17 @@ jobs:
 
         strategy:
             matrix:
-                elixir: [1.11.x, 1.12.x, 1.13.x]
+                elixir:
+                    - 1.11.x
+                    - 1.12.x
+                    - 1.13.x
 
-                otp: [23.x, 24.x, 25.x]
+                exclude:
+                    - elixir: 1.11.x
+
+                      otp: 25.x
+
+                otp:
+                    - 23.x
+                    - 24.x
+                    - 25.x
