--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
 
             - run: mix deps.get
 
+            - run: mix compile --warnings-as-errors
+
             - run: mix dialyzer
 
         strategy:
@@ -65,6 +67,8 @@ jobs:
                   otp-version: ${{ matrix.otp }}
 
             - run: mix deps.get
+
+            - run: MIX_ENV=test mix compile --warnings-as-errors
 
             - run: mix test
 
