--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
 
             - run: mix deps.get
 
+            - run: mix local.rebar --force
+
             - run: mix compile --warnings-as-errors
 
             - run: mix dialyzer
@@ -67,6 +69,8 @@ jobs:
                   otp-version: ${{ matrix.otp }}
 
             - run: mix deps.get
+
+            - run: mix local.rebar --force
 
             - run: MIX_ENV=test mix compile --warnings-as-errors
 
