--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,6 @@ jobs:
 
             - run: mix deps.get
 
-            - run: mix local.rebar --force
-
             - run: mix compile --warnings-as-errors
 
             - run: mix dialyzer
@@ -40,6 +38,10 @@ jobs:
 
                 exclude:
                     - elixir: 1.11.x
+
+                      otp: 25.x
+
+                    - elixir: 1.12.x
 
                       otp: 25.x
 
@@ -70,8 +72,6 @@ jobs:
 
             - run: mix deps.get
 
-            - run: mix local.rebar --force
-
             - run: MIX_ENV=test mix compile --warnings-as-errors
 
             - run: mix test
@@ -85,6 +85,10 @@ jobs:
 
                 exclude:
                     - elixir: 1.11.x
+
+                      otp: 25.x
+
+                    - elixir: 1.12.x
 
                       otp: 25.x
 
