--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-3name: ci
+name: ci
 
 on: push
 
@@ -75,7 +75,7 @@ jobs:
 
             - run: mix test
 
-        trategy:
+        strategy:
             matrix:
                 elixir:
                     - 1.12.x
